--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "front-end-starter",
+  "name": "HW14.1 Render",
   "version": "1.1.0",
   "private": true,
-  "description": "A starter template repo for 'front-end' students",
+  "description": "Homework 14.1 using render and filter",
   "main": "index.js",
   "scripts": {
     "start": "browser-sync start --server --files '**/*.html, **/*.css, **/**.js'",
@@ -12,7 +12,7 @@
     "html-css-js",
     "student"
   ],
-  "author": "Manav Misra",
+  "author": "Nathan Shelton",
   "license": "MIT",
   "devDependencies": {
     "browser-sync": "^2.26.14",
