--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HW14.1 Render",
+  "name": "hw14-1",
   "version": "1.1.0",
   "private": true,
   "description": "Homework 14.1 using render and filter",
